force-app/main/default/objects/AAI_Sandbox__c/AAI_Sandbox__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>AAI settings including username and password</description>
    <label>AAI Sandbox</label>
</CustomObject>