force-app/main/default/objects/AAI_Sandbox__c/fields/Error_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Error_Email_Address__c</fullName>
    <label>Error Email Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>