force-app/main/default/objects/AAI_Sandbox__c/fields/SessionDate__c.field-meta.xml
<CustomField>
    <fullName>SessionDate__c</fullName>
    <label>SessionDate</label>
    <type>DateTime</type>
</CustomField>