force-app/main/default/objects/AAI_Sandbox__c/fields/VendorId__c.field-meta.xml
<CustomField>
    <fullName>VendorId__c</fullName>
    <label>VendorId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>