force-app/main/default/objects/AAI_Sandbox__c/fields/VendorPassword__c.field-meta.xml
<CustomField>
    <fullName>VendorPassword__c</fullName>
    <label>VendorPassword</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>